Complete All components and split all pages

--- a/new/src/content/index.pug
+++ b/new/src/content/index.pug
@@ -1,19 +1,5 @@
-- var title = "MINA: Muslim Information Network of Australia";
-- var metaDescription = "MINA: Muslim Information Network of Australia";
-- var keywords = '';
-- var author = 'Fareez Ahmed';
-- var titleLog = 'img/logo.png';
-- var image = 'http://mina.org.au/d2/img/mina-logo.png';
-- var url = 'http://mina.org.au/';
-- var card = '';
-- var phone = '1800 000 0000';
-- var facebookUrl = '#';
-- var twitterUrl = '#';
-- var linkedinUrl = '#';
 - var index = 'true';
 - var pageTagline = 'The Art of Teaching is the Art of Assisting Discovery';
 - var subTagline = 'MINA by';
 - var subTagLink = '#';
-- var subTagLabel = '&nbspMINA';
-- var footerTitle = 'MINA';
-- var footerDecription = 'Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.';
+- var subTagLabel = 'MINA';
