--- a/new/src/content/about.pug
+++ b/new/src/content/about.pug
@@ -1,5 +1,12 @@
+// About Page
+- var about = 'true';
+- var pageTagline = 'About Us';
+- var subTagline = 'MINA by';
+- var subTagLink = '#';
+- var subTagLabel = 'MINA';
+// About Section
 - var aboutShortDescription = 'Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.';
 - var subHeader1 = 'We Want You To Learn English';
 - var subDescription1 = 'Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.'
-- var subList1 = [ 'Far far away, behind the word', 'There live the blind texts', 'Separated they live in bookmarksgrove'];
-- var subSections = [{ header: 'Real Project For Real Solutions', description: 'Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.'},{ header: 'Real Project For Real Solutions', description: 'Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.'}];
+-
+  var subSections = [{ header: 'Real Project For Real Solutions', description: 'Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.'},{ header: 'Real Project For Real Solutions', description: 'Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.'}];
