--- a/uat/css/main.css
+++ b/uat/css/main.css
@@ -5,6 +5,9 @@
   top: -20px;
   width: 152px;
   height: 70px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 2px;
 }
 
 .fh5co-social-icons li {
